INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

#SUBDIRS(pseudopurefluids purefluids) 

AUX_SOURCE_DIRECTORY(. DIR_COOLPROP_SRCS)

ADD_LIBRARY(coolprop_static STATIC ${DIR_COOLPROP_SRCS})
SET_TARGET_PROPERTIES(coolprop_static PROPERTIES OUTPUT_NAME "coolprop")
SET_TARGET_PROPERTIES(coolprop_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(coolprop_shared SHARED ${DIR_COOLPROP_SRCS})
SET_TARGET_PROPERTIES(coolprop_shared PROPERTIES OUTPUT_NAME "coolprop")
SET_TARGET_PROPERTIES(coolprop_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)

install( TARGETS coolprop_static coolprop_shared
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
    PUBLIC_HEADER DESTINATION include
    )

